--- a/templates/register/modal.html.twig
+++ b/templates/register/modal.html.twig
@@ -23,7 +23,7 @@
                     <input type="hidden" class="show_token" name ="show_token" value="">
 
                 <div class="form-group champ">
-                    <button id="connexion" type="submit" class="form-control border-0 font-weight-bold text-white" style="background-color:#EF0051;">Inscription</button>
+                    <button id="inscription" type="submit" class="form-control border-0 font-weight-bold text-white" style="background-color:#EF0051;">Inscription</button>
                 </div>
 
                 <div class="fb-login-button" data-width="280" data-size="medium" data-button-type="login_with" data-auto-logout-link="false" data-use-continue-as="false">
