--- a/templates/login/modal.html.twig
+++ b/templates/login/modal.html.twig
@@ -7,7 +7,7 @@
            </div>
            <div class="row">
                 <div class="col-sm-12">
-                        <form method="post" id="login_form">
+                        <form method="post">
                             {% if error is defined %}
                                  <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
                             {% endif %}
