--- a/templates/login/modal.html.twig
+++ b/templates/login/modal.html.twig
@@ -8,19 +8,16 @@
            <div class="row">
                 <div class="col-sm-12">
                         <form method="post">
-                            {% if error is defined %}
-                                 <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-                            {% endif %}
-
+                                 <div class="alert alert-danger" style="display:none;font-size: 0.7rem;" id="login-alert"></div>
                             <div class="form-group champ">
-                                <input type="email" class="form-control" name="_username"  id="email_login" value=" {% if last_username is defined %}{{ last_username }}{% endif %}" placeholder="Email">
+                                 <input type="email" id="login_email" class="form-control" name="LoginEmail" placeholder="Email">
                             </div>
 
                             <div class="form-group champ">
-                                <input type="password" name="_password" class="form-control" id="password_login" placeholder="Mot de passe">
+                                 <input type="password" id="login_password" class="form-control" name="password" placeholder="Mot de passe"> 
                             </div>
 
-                             <input type="hidden" name="api_token" id="api_token" value="">
+                             <input type="hidden" name="api_token" id="api_token">
 
                             <div class="form-group champ">
                                 <button  id="login" type="submit" class="form-control border-0 font-weight-bold text-white btn_submit" style="background-color:#EF0051;">Connexion</button>
