--- a/templates/register/modal.html.twig
+++ b/templates/register/modal.html.twig
@@ -7,7 +7,7 @@
            </div>
 
             <form id="register_form">
-                <div class="alert alert-danger" style="display: none;font-size: 0.7rem;" id="errorRegister"></div>
+                <div class="alert alert-danger" style="display: none;font-size: 0.7rem;" id="register-alert"></div>
 
                 <div class="form-group champ">
                     <input type="email" id="register_email" class="form-control" name="email" placeholder="Email">
@@ -23,7 +23,7 @@
                     <input type="hidden" class="show_token" name ="show_token" value="">
 
                 <div class="form-group champ">
-                    <button id="inscription" type="submit" class="form-control border-0 font-weight-bold text-white" style="background-color:#EF0051;">Inscription</button>
+                    <button id="inscription" type="submit" class="form-control border-0 font-weight-bold text-white btn_submit" style="background-color:#EF0051;">Inscription</button>
                 </div>
 
                 <div class="fb-login-button" data-width="280" data-size="medium" data-button-type="login_with" data-auto-logout-link="false" data-use-continue-as="false">
