--- a/templates/login/modal.html.twig
+++ b/templates/login/modal.html.twig
@@ -9,6 +9,7 @@
                 <div class="col-sm-12">
                         <form method="post">
                                  <div class="alert alert-danger" style="display:none;font-size: 0.7rem;" id="login-alert"></div>
+                                 <div class="alert alert-success" style="display:none;font-size: 0.5rem;" id="login-success"></div>
                             <div class="form-group champ">
                                  <input type="email" id="login_email" class="form-control" name="LoginEmail" placeholder="Email">
                             </div>
