--- a/templates/users/script.html.twig
+++ b/templates/users/script.html.twig
@@ -19,19 +19,54 @@
 <script src="../js/demo/chart-pie-demo.js"></script>
 
 <script>
- console.log("je suis ici")
-
 $(document).ready(function() {
 
-    
-    $.ajax({
-        method: "",
-        url:"",
-        async: true,
-        success: function(data) {
-            console.log(data)
-        }
-    })
-}) 
+    let store = true;
+    const token = localStorage.getItem("token");
 
+    if(token !== ""){
+
+        $.ajax({
+            type: "POST", 
+            url: "/profile/show", 
+            data: JSON.stringify({
+                "token": token,
+            }),
+            dataType: 'json',
+            async: true,
+            success: function(response) {
+
+                if(response != undefined){
+                    $('#myname').html(response.user[0].username);
+                    $('#logo-setting').attr('src', user.user[0].avatar);
+                }
+                console.log(response);
+                
+            },
+            error: function (err) {
+                
+                console.log(err);
+            }
+        });
+    }else{
+        store = false;
+        localStorage.removeItem('token');
+
+         window.location.href = '/';
+
+        console.log("Vous êtes deconnecté");
+    }
+
+    $('#deconnecter').click(function(e){
+        
+        if(token !== null){
+
+            store = false;
+            localStorage.removeItem('token');
+            console.log("Vous êtes deconnecté");
+        }
+        
+    });
+ 
+});
  </script>
