--- a/templates/users/sidebar.html.twig
+++ b/templates/users/sidebar.html.twig
@@ -2,15 +2,15 @@
 <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
 
     <!-- Sidebar - Brand -->
-    <a class="sidebar-brand d-flex align-items-center justify-content-center" href="{{ path('profile.setting.index') }}">
-        <div class="sidebar-brand-text mx-2"> {{ app.user.username }}</div>
+    <a class="sidebar-brand d-flex align-items-center justify-content-center" href="{#{ path('profile.setting.index') }#}">
+        <div class="sidebar-brand-text mx-2" id="myname"> {#{ user.username }#}</div>
         <i class="fas fa-fw far fa-edit" id="edit-profil"></i>
     </a>
 
     <!--Avatar-->
     <a class="nav-link d-flex flex-column align-items-center" href="#">
         <div class="nav-item">
-            <img class="rounded-circle logo-setting" id="logo-setting" src="{{ app.user.avatar }}"/>
+             <img class="rounded-circle logo-setting" id="logo-setting" src="https://firebasestorage.googleapis.com/v0/b/webradio-stream.appspot.com/o/User%2F70element-1.png?alt=media&token=fa8fa419-9e5f-4738-b2de-85536002a0d1"/>
         </div>
     </a>
 
@@ -25,13 +25,13 @@
     </li>
     <!-- Nav Item - Planning -->
     <li class="nav-item active d-flex align-items-center justify-content-center">
-        <a class="nav-link d-flex align-items-center justify-content-center" href="{{ path('profile.planning.index') }}">
+        <a class="nav-link d-flex align-items-center justify-content-center" href="{#{ path('profile.planning.index') }#}">
             <span>Planification</span>
         </a>
     </li>
     <!-- Nav Item - radios -->
     <li class="nav-item active d-flex align-items-center justify-content-center">
-        <a class="nav-link d-flex align-items-center justify-content-center" href="{{ path('radio.index') }}">
+        <a class="nav-link d-flex align-items-center justify-content-center" href="{#{ path('radio.index') }#}">
             <span>Radios</span>
         </a>
     </li>
@@ -50,7 +50,7 @@
     
     <!-- Nav Item - deconexion -->
     <li class="nav-item active" >
-        <a class="nav-link d-flex align-items-center justify-content-center" href="{{ path('logout') }}">
+        <a class="nav-link d-flex align-items-center justify-content-center" id="deconnecter" href="{{ path('logout') }}">
             <span>Se déconnecter</span>
         </a>
     </li>
